--- a/MatchManagerSystem/customermenu.ui
+++ b/MatchManagerSystem/customermenu.ui
@@ -39,34 +39,34 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>30</x>
      <y>100</y>
-     <width>471</width>
-     <height>250</height>
+     <width>501</width>
+     <height>252</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QPushButton" name="btn_search_buy">
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>120</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>11</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Pesquisar Partidas e Comprar Ingressos</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0">
+      <item row="1" column="1">
+       <widget class="QPushButton" name="btn_close_customer_menu">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>120</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Sair do Sistema</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="QPushButton" name="btn_update">
         <property name="minimumSize">
          <size>
@@ -90,8 +90,31 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="0">
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QPushButton" name="btn_search_buy">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>120</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>11</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Pesquisar Partidas e
+Comprar Ingressos</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
       <item row="0" column="1">
-       <widget class="QPushButton" name="btn_close_customer_menu">
+       <widget class="QPushButton" name="btn_bought_tickets">
         <property name="minimumSize">
          <size>
           <width>0</width>
@@ -104,7 +127,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Sair do Sistema</string>
+         <string>Ingressos Comprados</string>
         </property>
        </widget>
       </item>
@@ -113,6 +136,12 @@
    </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>btn_search_buy</tabstop>
+  <tabstop>btn_bought_tickets</tabstop>
+  <tabstop>btn_update</tabstop>
+  <tabstop>btn_close_customer_menu</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
